--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #111111;
+  overflow-x: hidden;
 }
 
 .hero-pattern {
