--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
+/* In your main CSS file (where @tailwind directives are) */
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  overflow-y: scroll; /* Add this line */
+}
 
 body {
   margin: 0;
@@ -12,7 +18,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #111111;
-  /* overflow-x: hidden; */ /* <-- Temporarily commented out! */
+  /* overflow-x: hidden; */ /* Keep this commented or removed unless specifically needed */
 }
 
 .hero-pattern {
